# certifi-system-store-wrapper

./: .gitignore  ChangeLog.md  LICENSE  MANIFEST.in  README.md  README_ja.md  pyproject.toml  setup.cfg  setup.py
src/: certifi_system.pth  certifi_system_store_wrapper.pth
src/certifi_system/: __init__.py  bootstrap.py  certificate.py  certificate_linux.py  certificate_macos.py  certificate_win.py  certificates.py  certificates_macos.py  certificates_win.py  logger.py  wrapper.py
src/certifi_system_store_wrapper/: __init__.py  __main__.py  bootstrap.py  certificates.py  certificates_linux.py  certificates_macos.py  certificates_win.py  logger.py  wrapper.py
